code service injection

--- a/PsybaseBlazerElectron/Shared/SurveyPrompt.razor
+++ b/PsybaseBlazerElectron/Shared/SurveyPrompt.razor
@@ -1,4 +1,13 @@
-﻿<div class="alert alert-secondary mt-4" role="alert">
+﻿@using Microsoft.AspNetCore.Components
+
+@inject PsybaseBlazerElectron.ServicesPB.RandomService RandomService
+@inject PsybaseBlazerElectron.ServicesPB.RandomServiceChange RandomServiceChange
+
+
+
+
+
+<div class="alert alert-secondary mt-4" role="alert">
     <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
     <strong>@Title</strong>
 
@@ -7,6 +16,13 @@
         <a target="_blank" class="font-weight-bold" href="https://go.microsoft.com/fwlink/?linkid=2112271">brief survey</a>
     </span>
     and tell us what you think.
+</div>
+
+<div class="alert alert-danger">
+    My random id is: @RandomService.RandomId and it will stay the same from start of app untill shutdown.
+</div>
+<div class="alert-heading">
+    My random id is: @RandomServiceChange.RandomId and it will change everytime untill page refresh.
 </div>
 
 @code {
