--- a/PsybaseBlazerElectron/Shared/NavMenu.razor
+++ b/PsybaseBlazerElectron/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Active">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Active Accounts
+            </NavLink>
+        </li>
     </ul>
 </div>
 
