--- a/PsybaseBlazerElectron/Shared/NavMenu.razor
+++ b/PsybaseBlazerElectron/Shared/NavMenu.razor
@@ -23,7 +23,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Active">
+            <NavLink class="nav-link" href="people">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Active Accounts
             </NavLink>
         </li>
